syntax = "proto3";

package connection_def.v1;

message Connection {
  string provider /*    */ = 1;
  string url /*         */ = 2;
  string display_name /**/ = 3;
}

message ConnectionSetting {
  string id /*          */ = 1;
  string provider /*    */ = 2;
  bool hidden /*        */ = 3;
  string display_name /**/ = 4;
  string url /*         */ = 5;
  string created_at /*  */ = 6;
}
